packages/llvm/src/tests/variable_declaration/snapshots/llvm__tests__variable_declaration__array_member_assignment__            const x  = [1, 1];            x[1] = (1 + 1);            .snap
---
source: packages/llvm/src/tests/variable_declaration/array_member_assignment.rs
expression: output

---
; ModuleID = 'main'
source_filename = "main"

define void @main() {
entry:
  %x_ = alloca [2 x double], align 8
  %"1" = getelementptr [2 x double], [2 x double]* %x_, i64 0, i64 0
  store double 1.000000e+00, double* %"1", align 8
  %"3" = getelementptr [2 x double], [2 x double]* %x_, i64 0, i64 1
  store double 1.000000e+00, double* %"3", align 8
  %"6" = getelementptr [2 x double], [2 x double]* %x_, i64 0, i64 1
  store double 2.000000e+00, double* %"6", align 8
  ret void
}

define void @__typescript__personality() {
entry:
  ret void
}

